# jfe

./: Cargo.toml  LICENSE  README.md  examples.ini  examples_16k.ini  examples_32k.ini  examples_fast.ini
lib/: escape_time.rs  ini.rs  lib.rs  tga.rs
lib/escape_time/: burning_ship.rs  mandelbrot.rs  quadratic_julia.rs  standard_newton.rs
lib/escape_time/mandelbrot/: amd64.rs  universal.rs
lib/simd/amd64/: avx512.rs  sse42.rs  ssse3.rs
src/: burning_ship.rs  fractal_names.rs  ini.rs  jfe.rs  lib.rs  mandelbrot.rs  numerical_traits.rs  server.rs  simd.rs
src/mandelbrot/: amd64.rs  universal.rs
src/simd/: amd64.rs  new_amd64.rs  new_new_amd64.rs  new_new_new_new_amd64.rs  new_new_new_new_new_amd64.rs  nouveau_amd64.rs
src/simd/amd64/: avx.rs  avx2.rs  base.rs  sse3.rs  sse41.rs
