[package]
name = "jfe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "jfe"
path = "lib/lib.rs"

[[bin]]
name = "jfe"
path = "src/jfe.rs"

[[bin]]
name = "jfe-server"
path = "src/server.rs"

[features]
default = []
nightly-features = ["nightly-features-benches"]
nightly-features-benches = []

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
strip = true
overflow-checks = false
panic = "abort"
lto = true

[profile.release-with-debug]
inherits = "release"
strip = false
overflow-checks = false
panic = "abort"
lto = false
debug = true
